--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.554.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.10.0",
     "recharts": "^2.15.4",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.4.0",
