--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.6.1",
         "express": "^4.22.1",
+        "jsonwebtoken": "^9.0.3",
         "mysql2": "^3.15.3"
     },
     "devDependencies": {
