--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,14 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "@google/generative-ai": "^0.24.1",
         "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "dotenv": "^16.6.1",
         "express": "^4.22.1",
         "jsonwebtoken": "^9.0.3",
-        "mysql2": "^3.15.3"
+        "mysql2": "^3.15.3",
+        "react-markdown": "^10.1.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.11"
