--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-select": "^2.2.6",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.1",
@@ -16,6 +17,7 @@
     "lucide-react": "^0.554.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.10.0",
     "recharts": "^2.15.4",
     "shadcn-ui": "^0.9.5",
