--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
         "dotenv": "^16.6.1",
         "express": "^4.22.1",
         "jsonwebtoken": "^9.0.3",
+        "multer": "^2.0.2",
         "mysql2": "^3.15.3",
+        "pdfkit": "^0.17.2",
         "react-markdown": "^10.1.0"
     },
     "devDependencies": {
