--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.6.1",
         "express": "^4.22.1",
+        "framer-motion": "^12.23.26",
         "jsonwebtoken": "^9.0.3",
         "multer": "^2.0.2",
         "mysql2": "^3.15.3",
