--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
         "jsonwebtoken": "^9.0.3",
         "multer": "^2.0.2",
         "mysql2": "^3.15.3",
+        "node-fetch": "^3.3.2",
         "pdfkit": "^0.17.2",
         "react-markdown": "^10.1.0"
     },
